--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     },
     "dependencies": {
         "js-cookie": "^3.0.1",
+        "vue-google-adsense": "^1.10.1",
         "vue-router": "^3.5.1",
+        "vue-script2": "^2.1.0",
         "vuetify": "^2.6.6"
     }
 }
